tests/ui/fmt/invalid-manifest.stderr
Error: key "name" not found
 --> poac.toml
   |
 1 | [package]
   | ~~~~~~~~~ in this table
